tests/NormalTests/paczka1/fuzzy1/61629263.err
Error in line 1: A331 A148 89,9
Error in line 9: Ô331 S601 24,0
Error in line 6: A331 S601 21,4
Error in line 2: ITld8 A331 30,0
Error in line 10: A331 A572 63,3
Error in line 20: ZUciU7P3ui A148 33,4
Error in line 27: A331 A572 11,4
Error in line 7: JM0jiF A148 92,4
Error in line 33: A331 A148 93,47
Error in line 37: JM0jiF S/01 50,2
